--- a/src/App.css
+++ b/src/App.css
@@ -7,60 +7,48 @@
 .app {
     width: 100vw;
     height: 100vh;
-}
-
-.wrap {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 90vh;
-}
-
-.circle {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    border: 3px dashed black;
-}
-
-.circle.entering {
-    animation: show-loader .5s forwards;
-}
-
-.circle.entered {
-    animation: rotate-loader .5s infinite;
-}
-
-.circle.exiting {
-    animation: show-loader .5s reverse;
-}
-
-.circle.exited {
 
 }
 
-@keyframes show-loader {
+input {
+    margin: 20px;
+}
+
+.fade-enter-active {
+    animation: fade-in 500ms forwards;
+}
+
+.fade-exit-active {
+    animation: fade-out 500ms forwards;
+}
+
+@keyframes fade-in {
     0% {
         opacity: 0;
-        transform: translateY(-200px);
+        transform: translateX(-150px);
     }
 
-    50% {
+    100% {
         opacity: 1;
+        transform: translateX(0px);
     }
-
-    100% {
-        transform: translateY(0px);
-    }
-
 }
-@keyframes rotate-loader {
+
+@keyframes fade-out {
     0% {
-        transform: rotate(0deg);
+        opacity: 1;
+        transform: translateX(0px);
     }
 
     100% {
-        transform: rotate(360deg);
+        opacity: 0;
+        transform: translateX(150px);
     }
-
 }
+
+
+
